Fix - page layout cutoff issue15

--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -223,7 +223,7 @@
 
 @media (min-width: 1000px) {
   .dashboard-pg2-lgeo  {
-    width: 1100px;
+    width: 1200px;
     display: inline-block;
     padding-left: 2%;
     padding-right: 2%;
@@ -383,7 +383,7 @@
 }
 
 .pg3-plot-lgeo {
-  /* width: 90%; */
+  width: 95%;
   display: block;
   padding-top: 1%;
 }
